# oncall

./: README.md
oncal-for-android/: CMakeCache.txt  CMakeLists.txt  about.cpp  about.h  about.ui  add_req.cpp  add_req.h  add_req.ui  android-_Oncall_-deployment-settings.json  build.ninja  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h  search.ui  sources.qrc  terms.cpp  terms.ui
oncal-for-android/android/: AndroidManifest.xml
oncall-for-windows/: CMakeLists.txt  about.cpp  about.ui  add_req.cpp  add_req.h  add_req.ui  mainwindow.cpp  mainwindow.ui  new.cpp  new.h  new.ui  search.cpp  search.h  search.ui  sources.qrc  terms.cpp  terms.h  terms.ui
server/: main.py
